# Rusty-NPB

./: LICENSE.md
Rayon/: Cargo.toml  EP.rs  common.rs
Rayon/common/: f64rand.rs  print_results.rs
Serial/: EP.rs  common.rs
Serial/common/: f64rand.rs  print_results.rs
TC/: Cargo.toml  EP.rs  common.rs
TC/common/: f64rand.rs  print_results.rs
